--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-*.png
+graphs/*.png
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
