--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,8 +1,8 @@
 version: '2.1'
 
 services:
-  warframetrader:
-    image: wfbot
+  warframetrader-v0.0.2:
+    image: warframetrader-v0.0.2
     build:
       context: .
       dockerfile: Dockerfile
