--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "workbench.colorCustomizations": {},
-    "python.pythonPath": "C:\\Users\\Dylann\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "/usr/bin/python3.8"
 }
